unpackaged/main/default/objects/fferpcore__DPNodeDeclaration__c/fferpcore__DPNodeDeclaration__c.object-meta.xml
<CustomObject>
    <description>Declaration of a node in a publisher's structure.</description>
    <label>Declarative Publication Node</label>
    <nameField>
        <displayFormat>DPN-{00000000}</displayFormat>
        <label>Declarative Publication Node</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Declarative Publication Node</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>