unpackaged/main/default/objects/fferpcore__DPNodeDeclaration__c/fields/fferpcore__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ErrorMessage__c</fullName>
    <description>The result of a failed merge onto a message description</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>