unpackaged/main/default/objects/fferpcore__DPNodeDeclaration__c/fields/fferpcore__JsonPath__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__JsonPath__c</fullName>
    <description>The insertion point within the message, this field itself is a JSON String Array</description>
    <label>JSON Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>