unpackaged/main/default/objects/fferpcore__DPNodeDeclaration__c/fields/fferpcore__LiteralSourceData__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LiteralSourceData__c</fullName>
    <description>When Source Type is Literal, this is the data.</description>
    <label>Literal Source Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>