unpackaged/main/default/objects/fferpcore__DPNodeDeclaration__c/fields/fferpcore__LiteralSourceDescription__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LiteralSourceDescription__c</fullName>
    <description>When Source Type is Literal or Pass Through, this is the Description</description>
    <label>Literal Source Description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>