unpackaged/main/default/objects/fferpcore__DPNodeDeclaration__c/fields/fferpcore__NodeType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__NodeType__c</fullName>
    <description>Determines the type of JSON structure generated by this Node.</description>
    <label>Node Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scalar</fullName>
            </value>
            <value>
                <fullName>Map</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>