unpackaged/main/default/objects/fferpcore__DPNodeDeclaration__c/fields/fferpcore__Publication__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Publication__c</fullName>
    <label>Publication</label>
    <referenceTo>fferpcore__MessagingPublication__c</referenceTo>
    <relationshipLabel>Declarative Nodes</relationshipLabel>
    <relationshipName>DeclarativeNodes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>