unpackaged/main/default/objects/fferpcore__DPNodeDeclaration__c/fields/fferpcore__Sequence__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Sequence__c</fullName>
    <description>Order that the nodes have to be built in order to build up the message.</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>