unpackaged/main/default/objects/fferpcore__DPNodeDeclaration__c/fields/fferpcore__SourceKey__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SourceKey__c</fullName>
    <description>When Source Type is From Context, this is the key to give to the Context to create the Source.</description>
    <label>Source Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>